--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=TaskManager
-spring.datasource.url=jdbc:mysql://db:3306/taskmanager
+spring.datasource.url=jdbc:mysql://localhost:3306/taskmanager
 spring.datasource.username=root
 spring.datasource.password=admin
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
