Set up Task Manager project

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,10 +14,17 @@ services:
   frontend:
     build: ./frontend
     ports:
-      - "3000:80"
+      - "3000:3000"
+    volumes:
+      - ./frontend:/app
+      - /app/node_modules
+    environment:
+      - VITE_API_URL=http://localhost:8080
 
   db:
     image: mysql:8
+    ports:
+      - "3306:3306"
     environment:
       - MYSQL_ROOT_PASSWORD=admin
       - MYSQL_DATABASE=taskmanager
