--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,8 +1,9 @@
- 
-FROM node:18 as build
-WORKDIR /app
-COPY . .
-RUN npm install && npm run build
+FROM node:18
 
-FROM nginx:alpine
-COPY --from=build /app/dist /usr/share/nginx/html
+WORKDIR /app
+COPY package*.json ./
+RUN npm install
+COPY . .
+
+EXPOSE 3000
+CMD ["npm", "run", "dev", "--", "--host"]
